# commodity-signal-lab

./: .env.example  .gitignore  ANALYSIS.md  README.md  pyproject.toml
configs/: backtest.yaml  features.yaml  model.yaml  universe.yaml
docs/: sample_backtest_metrics.md
reports/: backtest_report.md
scripts/: backtest.py  build_features.py  drift_report.py  fetch_data.py  run_dashboard.py  train.py
src/signal_lab/: __init__.py
src/signal_lab/backtest/: __init__.py  costs.py  engine.py  metrics.py  risk.py
src/signal_lab/dashboard/: __init__.py  app.py
src/signal_lab/features/: __init__.py  macro.py  regimes.py  technicals.py
src/signal_lab/ingestion/: __init__.py  macro_fred.py  prices.py
src/signal_lab/mlops/: __init__.py  drift.py  tracking.py
src/signal_lab/utils/: __init__.py  config.py  io.py
tests/: __init__.py  test_backtest.py  test_features.py
